; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/libpq/extr_auth-scram.c_sanitize_char.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/libpq/extr_auth-scram.c_sanitize_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sanitize_char.buf = internal global [5 x i8] zeroinitializer, align 1
@.str = private unnamed_addr constant [5 x i8] c"'%c'\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"0x%02x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8)* @sanitize_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @sanitize_char(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  %3 = load i8, i8* %2, align 1
  %4 = sext i8 %3 to i32
  %5 = icmp sge i32 %4, 33
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i8, i8* %2, align 1
  %8 = sext i8 %7 to i32
  %9 = icmp sle i32 %8, 126
  br i1 %9, label %10, label %13

10:                                               ; preds = %6
  %11 = load i8, i8* %2, align 1
  %12 = call i32 @snprintf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @sanitize_char.buf, i64 0, i64 0), i32 5, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8 zeroext %11)
  br label %16

13:                                               ; preds = %6, %1
  %14 = load i8, i8* %2, align 1
  %15 = call i32 @snprintf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @sanitize_char.buf, i64 0, i64 0), i32 5, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8 zeroext %14)
  br label %16

16:                                               ; preds = %13, %10
  ret i8* getelementptr inbounds ([5 x i8], [5 x i8]* @sanitize_char.buf, i64 0, i64 0)
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
